--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,10 +1,14 @@
 name: learn-github-actions
 on: [push]
 jobs:
-  check-bats-version:
+  run the project:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run : npm install
-      - run: npm start
+      - run: |
+        npm ci
+        npm run build --if-present
+        npm start & npx wait-on http://localhost:3000
+    env:
+        CI: true
