--- a/.github/workflows/netlify-deploy.yml
+++ b/.github/workflows/netlify-deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.1
         with:
-          publish-dir: './dist'
+          publish-dir: './netlify'
           production-branch: master
           github-token: ${{ secrets.GITHUB }}
           deploy-message: "Deploy from GitHub Actions"
