--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,5 +1,8 @@
 name: learn-github-actions
-on: [push]
+on: 
+  push:
+    branches:
+      - new-feature
 jobs:
   run-the-project:
     runs-on: ubuntu-latest
