--- a/.github/workflows/netlify-deploy.yml
+++ b/.github/workflows/netlify-deploy.yml
@@ -1,8 +1,9 @@
 # .github/workflows/netlify.yml
 name: Build and Deploy to Netlify
-on:
+on: 
   push:
-  pull_request:
+    branches:
+      - new-feature
 jobs:
   build:
     runs-on: ubuntu-18.04
