name changes to the workflow

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "recoil": "^0.1.2",
     "web-vitals": "^0.2.4"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -36,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-test-renderer": "^17.0.1"
   }
 }
