--- a/.github/workflows/complete-build.yml
+++ b/.github/workflows/complete-build.yml
@@ -7,9 +7,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: |
-          npm install
-          npm run build --if-present
-          npm start & npx wait-on http://localhost:3000
+          yarn install
+          yarn run build --if-present
+          yarn start & npx wait-on http://localhost:3000
     env:
         CI: true
 
