--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - run: yarn install
-      - run: yarn run build --if-present
+      - run: npm install
+      - run: npm run build --if-present
 
       # ( Build to ./dist or other directory... )
 
