main branch deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@
 name: Build and Deploy to Netlify
 on: 
   push:
-    branches: [ $default-branch ]
+    branches: [ main ]
   pull_request: 
-    branches: [ $default-branch ]
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-18.04
