name change for actions

--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -1,4 +1,4 @@
-name: Slack Notification
+name: slack-notification
 on: 
   push:
     branches: [ main ]
@@ -6,11 +6,11 @@ on:
     branches: [ main ]
 jobs:
   slackNotification:
-    name: Slack Notification
+    name: slack-notification
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Slack Notification
+    - name: slack-notification
       uses: rtCamp/action-slack-notify@v2
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
