--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 # .github/workflows/netlify.yml
-name: Build and Deploy to Netlify
+name: deploy-to-netlify
 on: 
   push:
     branches: [ main ]
@@ -13,7 +13,7 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
 
-      - name: Deploy to Netlify
+      - name: deploy-to-netlify
         uses: nwtgck/actions-netlify@v1.1
         with:
           publish-dir: './build'
