--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -4,6 +4,8 @@ on:
     branches: [ main ]
   pull_request: 
     branches: [ main ]
+env:
+  COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
 jobs:
   slackNotification:
     name: slack-notification
@@ -15,5 +17,6 @@ jobs:
         SLACK_USERNAME : ${{ secrets.SLACK_USERNAME }}
         SLACK_ICON : https://mwblive-0obrejwqde.netdna-ssl.com/wp-content/uploads/2018/12/mwb-logo.png
         SLACK_COLOR: '#643eff'
-        SLACK_MESSAGE: ${{ github.event.head_commit.message }}
+        SLACK_MESSAGE: $COMMIT_MESSAGE
+
 
