--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -17,6 +17,6 @@ jobs:
         SLACK_USERNAME : ${{ secrets.SLACK_USERNAME }}
         SLACK_ICON : https://mwblive-0obrejwqde.netdna-ssl.com/wp-content/uploads/2018/12/mwb-logo.png
         SLACK_COLOR: '#643eff'
-        SLACK_MESSAGE: "$COMMIT_MESSAGE"
+        SLACK_MESSAGE: ${{ $COMMIT_MESSAGE }}
 
 
