--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -38,6 +38,7 @@ jobs:
     name: slack-notification
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - uses: rtCamp/action-slack-notify@v2
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
