--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/jest": "^26.0.20",
     "@types/jquery": "^3.5.5",
     "@types/lodash": "^4.14.166",
-    "@types/node": "^13.9.2",
+    "@types/node": "^13.13.40",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.0",
     "jquery": "^3.5",
     "laravel-mix": "^5.0.9",
     "lodash": "^4.17.20",
@@ -38,8 +39,9 @@
     "prettier": "2.2.1",
     "prettier-eslint": "^12.0.0",
     "react-test-renderer": "^17.0.1",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
