--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "identity-obj-proxy": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -10,7 +11,6 @@
     "web-vitals": "^1.1.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.20",
     "@types/jquery": "^3.5.5",
@@ -31,7 +31,6 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.0",
     "jquery": "^3.5",
     "laravel-mix": "^5.0.9",
     "lodash": "^4.17.20",
@@ -66,5 +65,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
