--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: |
-          yarn install
-          yarn test
+      - run: yarn install
+      - run: yarn test
     env:
         CI: true
 
